# flask-to-fastapi-migration-guide

./: LICENSE  README.md
00-why-migrate/: README.md  WSGI-vs-ASGI.md
01-start-fastapi/: README.md  main.py  pyproject.toml
02-routing-and-requests/: README.md  main.py
02-routing-and-requests/routers/: users.py
02-routing-and-requests/schemas/: user.py
03-middleware/: README.md  pyproject.toml
03-middleware/core/: __init__.py  exceptions.py
03-middleware/middleware/: __init__.py  timing_middleware.py
03-middleware/repositories/: user_repository.py
03-middleware/routers/: __init__.py
03-middleware/utils/: __init__.py  logger.py
04-authenication/: README.md  main.py  pyproject.toml
04-authenication/core/: error_handlers.py  exceptions.py
04-authenication/middleware/: logging_middleware.py  request_id_middleware.py
04-authenication/repositories/: __init__.py  auth_repository.py
04-authenication/routers/: auth.py
04-authenication/schemas/: __init__.py
04-authenication/utils/: __init__.py  jwt.py
05-sql-alchemy/: .gitignore  README.md  database.py  main.py  models.py  pyproject.toml
06-async-function/: .gitignore  README.md  celery_app.py  env.example  main.py  pyproject.toml
06-async-function/core/: __init__.py  error_handlers.py  exceptions.py
06-async-function/routers/: __init__.py  async_demo.py  background_tasks.py
06-async-function/utils/: __init__.py
07-test-framework/: .coveragerc  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
07-test-framework/.github/workflows/: test.yml
07-test-framework/core/: __init__.py  dependencies.py
07-test-framework/repositories/: __init__.py  user_repository.py
07-test-framework/routers/: __init__.py  users.py
07-test-framework/schemas/: __init__.py  user.py
07-test-framework/services/: __init__.py  user_service.py
07-test-framework/tests/: conftest.py  test_core.py  test_main.py  test_users.py
08-realtime-websocket/: README.md  main.py  pyproject.toml
08-realtime-websocket/routers/: __init__.py  websocket.py
08-realtime-websocket/static/: chat.html
09-todo-list-migration/: README.md  docker-compose.yml
09-todo-list-migration/fastapi-app/: .gitignore  Dockerfile  database.py  main.py  pyproject.toml  requirements.txt
09-todo-list-migration/fastapi-app/core/: __init__.py  dependencies.py  error_handlers.py  exceptions.py
09-todo-list-migration/fastapi-app/models/: __init__.py  todo.py  user.py
09-todo-list-migration/fastapi-app/repositories/: __init__.py  todo_repository.py  user_repository.py
09-todo-list-migration/fastapi-app/routers/: __init__.py  auth.py  todos.py
09-todo-list-migration/fastapi-app/schemas/: __init__.py  auth.py
09-todo-list-migration/fastapi-app/services/: auth_service.py  todo_service.py
09-todo-list-migration/fastapi-app/utils/: __init__.py  bloom_filter.py  cache.py  jwt_utils.py  password.py
10-deployment/: README.md  docker.md  environment.md  kubernetes.md  monitoring.md  production-best-practices.md  server.md
(+42 files in other folders)
