[project]
name = "fastapi-routing-example"
version = "1.0.0"
description = "FastAPI Routing and Request Handling Example"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-multipart>=0.0.6",  # For file uploads
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",  # For testing async endpoints
    "pytest-asyncio>=0.21.0",
]
