[project]
name = "fastapi-websocket-example"
version = "1.0.0"
description = "FastAPI WebSocket Example - Real-time Communication"
requires-python = ">=3.9"
dependencies = [
    # FastAPI 核心
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    # WebSocket 支援（FastAPI 內建，無需額外依賴）
    # 但我們需要一些工具
    "python-multipart>=0.0.6",  # 用於表單處理
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",  # 用於測試
    "websockets>=12.0",  # 用於 WebSocket 測試
]

